--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -170,11 +170,20 @@
     <Compile Include="Migrations\201711181527262_InitialModel.Designer.cs">
       <DependentUpon>201711181527262_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711181603123_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201711181603123_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201711181603123_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711181608332_AddMembershipType.cs" />
+    <Compile Include="Migrations\201711181608332_AddMembershipType.Designer.cs">
+      <DependentUpon>201711181608332_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -256,6 +265,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201711181527262_InitialModel.resx">
       <DependentUpon>201711181527262_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181603123_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201711181603123_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181608332_AddMembershipType.resx">
+      <DependentUpon>201711181608332_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
