--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -178,6 +178,14 @@
     <Compile Include="Migrations\201711181608332_AddMembershipType.Designer.cs">
       <DependentUpon>201711181608332_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711181744253_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201711181744253_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201711181744253_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711181759524_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201711181759524_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201711181759524_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -271,6 +279,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711181608332_AddMembershipType.resx">
       <DependentUpon>201711181608332_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181744253_PopulateMembershipTypes.resx">
+      <DependentUpon>201711181744253_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181759524_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201711181759524_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
