--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -186,6 +186,22 @@
     <Compile Include="Migrations\201711181759524_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201711181759524_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711181904184_AddNameToMembershipTypes.cs" />
+    <Compile Include="Migrations\201711181904184_AddNameToMembershipTypes.Designer.cs">
+      <DependentUpon>201711181904184_AddNameToMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711181906426_PopulateMembershipTypeName.cs" />
+    <Compile Include="Migrations\201711181906426_PopulateMembershipTypeName.Designer.cs">
+      <DependentUpon>201711181906426_PopulateMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711181917541_PopulateMembershipTypeName1.cs" />
+    <Compile Include="Migrations\201711181917541_PopulateMembershipTypeName1.Designer.cs">
+      <DependentUpon>201711181917541_PopulateMembershipTypeName1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711181923390_UpdateMembershipTypeName.cs" />
+    <Compile Include="Migrations\201711181923390_UpdateMembershipTypeName.Designer.cs">
+      <DependentUpon>201711181923390_UpdateMembershipTypeName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -285,6 +301,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711181759524_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201711181759524_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181904184_AddNameToMembershipTypes.resx">
+      <DependentUpon>201711181904184_AddNameToMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181906426_PopulateMembershipTypeName.resx">
+      <DependentUpon>201711181906426_PopulateMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181917541_PopulateMembershipTypeName1.resx">
+      <DependentUpon>201711181917541_PopulateMembershipTypeName1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711181923390_UpdateMembershipTypeName.resx">
+      <DependentUpon>201711181923390_UpdateMembershipTypeName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
