--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -218,6 +218,10 @@
     <Compile Include="Migrations\201711191200282_AddMoviesTable.Designer.cs">
       <DependentUpon>201711191200282_AddMoviesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711191204065_PopulateMoviesTable.cs" />
+    <Compile Include="Migrations\201711191204065_PopulateMoviesTable.Designer.cs">
+      <DependentUpon>201711191204065_PopulateMoviesTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -291,6 +295,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -341,6 +346,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711191200282_AddMoviesTable.resx">
       <DependentUpon>201711191200282_AddMoviesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711191204065_PopulateMoviesTable.resx">
+      <DependentUpon>201711191204065_PopulateMoviesTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
